<resources>
    <string name="app_name">MaximSeg</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_logout">Terminar turno</string>
    <string name="menu_change_user">Cambiar de usuario</string>
    <string name="view_ronda">Ver ronda</string>
    <string name="view_rondas">Ver rondas</string>
    <string name="start_round">Iniciar Ronda</string>
    <string name="scan_stop">Escanear código QR</string>
    <string name="end_round">Finalizar Ronda</string>
    <string name="observacion">Observación</string>
    <string name="create_news">Notificar Novedad</string>
    <string name="date_round">01-01-2019</string>
    <string name="time_round">00:00</string>
    <string name="date">01-01-2019</string>
    <string name="time">00:00</string>
    <string name="datetime">01-01-2019 00:00</string>
    <string name="tipo">Tipo</string>
    <string name="privado">Privado</string>
    <string name="publico">Público</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="title_reporte">REPORTE</string>
    <string name="title_reporte_danos">REPORTE  DE DAÑOS</string>
    <string name="title_paradas">Paradas</string>
    <string name="title_reporte_parada">REPORTE DE TAREA</string>
    <string name="title_activity_reporte_parada">REPORTE DE TAREA</string>
    <string name="title_activity_parada_tarea">TAREAS</string>
    <string name="title_activity_rondas">Rondas</string>
    <string name="title_activity_novedad">NOTIFICAR NOVEDAD</string>
    <string name="title_activity_novedad_detalles">DETALLES DE NOVEDAD</string>
    <string name="title_activity_novedad_detalle">AGREGAR DETALLE</string>
    <string name="btnReporte">Enviar</string>
    <string name="btnAdjuntar">Adjuntar imagen</string>
    <string name="btnAdjuntado">Imagen adjuntada</string>
    <string name="btnAdd">Agregar</string>
    <string name="CardPunto">Nombre de Punto</string>
    <string name="card_inicio">HORA DE INICIO: 06:00</string>
    <string name="card_salida">HORA DE SALIDA: 16:00</string>
    <string name="alert_end_turno">¿Desea terminar su turno? Se marcará su turno como terminado.</string>
    <string name="alert_end_round">¿Desea terminar su ronda? Se marcará la ronda como terminada.</string>
    <string name="alert_start_round">¿Desea iniciar esta ronda?</string>
    <string name="alert_change_privacy">¿Desea cambiar la privacidad de este elemento?</string>
    <string name="alert_end_tarea">¿Completó la tarea? Se marcará la tarea como hecha.</string>
    <string name="alert_description">¿Existió alguna novedad durante este proceso? Por favor, ingrésala.</string>
    <string name="alert_login">Escriba su cédula.</string>
    <string name="title_tareas">PROCEDIMIENTOS</string>
    <string name="title_inventario">CAMBIO DE TURNO</string>
    <string name="title_task">TAREAS</string>
    <string name="codigo">Código</string>
    <string name="nombre">Nombre</string>
    <string name="marca">Marca</string>
    <string name="btnInventario">Guardar</string>
    <string name="btnSave">Guardar</string>
    <string name="tarea">Tarea</string>
    <string name="ronda">Ronda</string>
    <string name="hora_inicio">09:00</string>
    <string name="menu_home">Perfil</string>
    <string name="menu_task">Tareas/Procedimientos</string>
    <string name="menu_rounds">Rondas</string>
    <string name="menu_obligations">Obligaciones</string>
    <string name="menu_reports">Novedades Públicas</string>
    <string name="menu_private_reports">Novedades Privadas</string>
    <string name="menu_avisos">Avisos</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="save">Guardar</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="cancel">Cancelar</string>
    <string name="contact">Contactar</string>
    <string name="back">Retornar</string>
    <string name="text_obligations">Brindar el mejor y profesional servicio de seguridad integral, contamos con un capital humano en continua capacitación y con altos valores morales y éticos.

Nuestra principal misión minimizar los riesgos al factor humano y la protección patrimonial. </string>
    <string name="dialog_profile_description">Ingrese su número de cédula</string>
    <string name="error_dialog">El número de cedula ingresado no coincide con el guardia elegido</string>
    <string name="auth_button_login">Iniciar turno</string>
    <string name="auth_button_foto">Iniciar turno</string>
    <string name="auth_button_register">Registrarse</string>
    <string name="auth_button_picture">Tomar foto</string>
    <string name="error_round">Ya existe una ronda en proceso.  Debe finalizarla.</string>
    <string name="no_round">Para poder escanear un codigo qr debe iniciar una ronda.</string>
    <string name="error_back_round">Complete el registro de tareas.</string>
    <string name="error_supervisor">Esta aplicación no puede ser usada por un supervisor.</string>
    <string name="error_general">Ha ocurrido un error inesperado.</string>
    <string name="error_location">Ha ocurrido un error al obtener su ubicación. Asegúrese de haber activado la
        geolocalización.
    </string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_fields_required">Debe llenar todos los campos.</string>
    <string name="error_invalid_email">El correo no es válido</string>
    <string name="error_internet">Necesita una conexión a internet para acceder a esta funcionalidad.</string>
    <string name="error_internet2">No se dectectó conexión a internet. Inténtelo de nuevo.</string>
    <string name="error_no_details">Esta tarea no cuenta con detalles.</string>
    <string name="error_password_mismatch">Las claves no concuerdan.</string>
    <string name="error_birthday_required">Debe ingresar una fecha de nacimiento.</string>
    <string name="error_image_required">Debe subir una imagen.</string>
    <string name="error_phone_required">Debe ingresar un número de teléfono.</string>
    <string name="error_date_future">La fecha de nacimiento no es válida.</string>
    <string name="error_permissions">No autorizó los permisos.</string>
    <string name="error_heavy">El archivo seleccionado es demasiado pesado.</string>
    <string name="error_no_products">Este puesto no cuenta con inventario asignado</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password2">Repetir contraseña</string>
    <string name="hint_cedula">Cédula</string>
    <string name="hint_phone">Teléfono celular</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_nombre1">Primer nombre</string>
    <string name="hint_nombre2">Segundo nombre (opcional)</string>
    <string name="hint_apellido1">Primer apellido</string>
    <string name="hint_apellido2">Segundo apellido</string>
    <string name="hint_edad">Edad</string>
    <string name="hint_nacimiento">Fecha de nacimiento</string>
    <string name="unknown_location">La ubicación no pudo obtenerse.</string>
    <string name="channel_name">ulocation</string>
    <string name="channel_description">Maximseg\'s default notification channel</string>
    <string name="persistent_notification">Maximseg está salvaguardando su ubicación.</string>
    <string name="profile_label_tab1">Tareas</string>
    <string name="profile_label_tab2">Procedimientos</string>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="home_message_logout">¿Está seguro de querer cerrar su sesión?</string>
    <string name="title_activity_inventario">InventarioActivity</string>
</resources>