<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_rondas"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RondasFragment">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:id="@+id/contentView"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                    android:id="@+id/card_ronda"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="25dp">

                    <TextView
                            android:id="@+id/txtDateRound"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/date_round"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/txtTimeRound"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/time_round"
                            android:textSize="60sp"
                            android:textStyle="bold" />

                    <Button
                            android:id="@+id/btnverRondas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="20dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/trading_button3"
                            android:gravity="center"
                            android:padding="15dp"
                            android:text="@string/view_ronda"
                            android:textColor="@android:color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    <Button
                            android:id="@+id/btnRonda"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="20dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/trading_button3"
                            android:gravity="center"
                            android:padding="15dp"
                            android:text="@string/start_round"
                            android:textColor="@android:color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    <Button
                            android:id="@+id/btnScan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/trading_button3"
                            android:layout_margin="5dp"
                            android:padding="15dp"
                            android:text="@string/scan_stop"
                            android:textSize="24sp" />
                    <Button
                            android:id="@+id/btnEndRound"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/trading_button2"
                            android:layout_margin="5dp"
                            android:padding="15dp"
                            android:text="@string/end_round"
                            android:textColor="@color/white"
                            android:textSize="24sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <LinearLayout
                    android:id="@+id/content_rondas"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rvRondas"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="2dp">

                        </androidx.recyclerview.widget.RecyclerView>
                    </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
                android:id="@+id/progressView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="140dip"
                android:minHeight="140dip"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/progress"
                android:padding="100dp"
                />
    </RelativeLayout>
    </ScrollView>
</FrameLayout>
