<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
            android:id="@+id/cardNovedad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="getNovedadDetalles"
            android:padding="5dp"
            app:cardCornerRadius="@dimen/nav_header_vertical_spacing">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/txtCreador"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/nombre" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="5dp">

                    <TextView
                            android:id="@+id/txtnovedadfecha"
                            android:layout_width="197dp"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:padding="5dp"
                            android:text="@string/datetime"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                                android:id="@+id/cardprivacidad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                app:cardBackgroundColor="@color/colorpublic"
                                app:cardCornerRadius="@dimen/nav_header_vertical_spacing">

                            <TextView
                                    android:id="@+id/txtprivacidad"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:paddingHorizontal="14dp"
                                    android:paddingVertical="7dp"
                                    android:text="@string/publico"
                                    android:textColor="@color/white"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                >

                <ImageView
                        android:id="@+id/imgnovedad"
                        android:layout_width="197dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:padding="10dp"
                        android:src="@drawable/placeholder" />

                <TextView
                        android:id="@+id/txtnovedad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/lorem"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>