<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
<LinearLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:background="@color/colorPrimaryDark"
            android:padding="15dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/men"
                    app:civ_border_color="@color/colorSecondary"
                    app:civ_border_width="2dp" />

        </RelativeLayout>
        <TextView
                android:id="@+id/textNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:text="@string/nombre" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/amdp_date_picker_text_normal_dark_theme"
                app:cardCornerRadius="15dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">

                    <TextView
                            android:id="@+id/card_punto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSecondary"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/CardPunto"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="15dp"
                            app:srcCompat="@drawable/entrada" />

                    <TextView
                            android:id="@+id/card_inicio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="25dp"
                            android:gravity="center"
                            android:text="@string/card_inicio"
                            android:textColor="@color/amdp_line_dark"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="15dp"
                            app:srcCompat="@drawable/salida" />

                    <TextView
                            android:id="@+id/card_salida"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="25dp"
                            android:gravity="center"
                            android:text="@string/card_salida"
                            android:textColor="@color/amdp_line_dark"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_height="wrap_content">
<!--
        <androidx.cardview.widget.CardView
                android:id="@+id/cardprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="logOut"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="15dp">

            <TextView
                    android:id="@+id/log_out"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="25dp"
                    android:textSize="24sp"

                    android:text="@string/menu_change_user"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
-->
        <Button
                android:id="@+id/btnScan"
                android:background="@drawable/trading_button4"
                android:onClick="logOut"
                android:textColor="@android:color/white"
                android:padding="25dp"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_change_user"
                />
    </LinearLayout>
</LinearLayout>
    <ProgressBar
            android:id="@+id/progressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="140dip"
            android:minHeight="140dip"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/progress"
            android:padding="100dp"
            />
        </RelativeLayout>
</ScrollView>
